--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-
+    <h1>
+        <span class="letter">H</span>
+        <span class="letter">E</span>
+        <span class="letter">L</span>
+        <span class="letter">L</span>
+        <span class="letter">O</span>
+    </h1>
+    <script src="app.js"></script>
 </body>
 
 </html>
