--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taxes Tests</title>
+
+    <!-- include CSS for Jasmine -->
+    <link rel="stylesheet" href="https://unpkg.com/jasmine-core@4.1.0/lib/jasmine-core/jasmine.css" />
 </head>
 
 <body>
-    <h1>
-        <span class="letter">H</span>
-        <span class="letter">E</span>
-        <span class="letter">L</span>
-        <span class="letter">L</span>
-        <span class="letter">O</span>
-    </h1>
+
+    <script src="https://unpkg.com/jasmine-core@4.1.0/lib/jasmine-core/jasmine.js"></script>
+    <script src="https://unpkg.com/jasmine-core@4.1.0/lib/jasmine-core/jasmine-html.js"></script>
+    <script src="https://unpkg.com/jasmine-core@4.1.0/lib/jasmine-core/boot0.js"></script>
+    <script src="https://unpkg.com/jasmine-core@4.1.0/lib/jasmine-core/boot1.js"></script>
+
+    <script src="taxes.js"></script>
+    <script src="taxes.test.js"></script>
+
 </body>
 
 </html>
